--- a/Clients.html
+++ b/Clients.html
@@ -30,24 +30,8 @@
 </head>
 
 <body>
-    <div class="container top-space">
-        <div class="heading-text">
-            <h1><br>A SNEAK PEEK AT OUR CLIENT LIST<br><br></h1>
-            <p><br>We work with over XXX esteemed clients spread across X different States. These are some of our well known clients<br><br></p>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row flex-box flex-wrap-wrap">
-            <div class="col-sm-4 flex-box flex-justify-center flex-align-center"><a href="assets/img/1.png" class="fancybox" rel="gallery1" title="Hero Image Nature"><img class="img-fluid" src="assets/img/1.png"></a></div>
-            <div class="col-sm-4 flex-box flex-justify-center flex-align-center"><a href="assets/img/2.jpg" class="fancybox" rel="gallery1" title="Hero Image Technology"><img class="img-fluid" src="assets/img/2.jpg"></a></div>
-            <div class="col-sm-4 flex-box flex-justify-center flex-align-center"><a href="assets/img/3.png" class="fancybox" rel="gallery1" title="Hero Image Travel"><img class="img-fluid" src="assets/img/3.png"></a></div>
-            <div class="col-sm-4 flex-box flex-justify-center flex-align-center"><a href="assets/img/4.png" class="fancybox" rel="gallery1" title="Hero Image Food"><img class="img-fluid" src="assets/img/4.png"></a></div>
-            <div class="col-sm-4 flex-box flex-justify-center flex-align-center"><a href="assets/img/5.png" class="fancybox" rel="gallery1" title="Hero Image Music"><img class="img-fluid" src="assets/img/5.png"></a></div>
-            <div class="col-sm-4 flex-box flex-justify-center flex-align-center"><a href="assets/img/6.png" class="fancybox" rel="gallery1" title="Hero Image Photography"><img class="img-fluid" src="assets/img/6.png"></a></div>
-        </div>
-    </div>
-    <nav class="navbar navbar-light navbar-expand-lg fixed-top navigation-clean" style="background-color:#f4f4f4;">
-        <div class="container"><a class="navbar-brand" href="index.html"><img src="assets/img/sample Logo.jpg" style="width:180px;"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><i class="typcn typcn-th-menu" style="font-size:30px;color:rgb(42,42,42);"></i></button>
+    <nav class="navbar navbar-light navbar-expand-lg navigation-clean" style="background-color:#f4f4f4;">
+        <div class="container"><a class="navbar-brand"><img src="assets/img/sample Logo.jpg" style="width:180px;"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><i class="typcn typcn-th-menu" style="font-size:30px;color:rgb(42,42,42);"></i></button>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
@@ -66,6 +50,22 @@
         </div>
         </div>
     </nav>
+    <div class="container top-space">
+        <div class="heading-text">
+            <h1><br>A SNEAK PEEK AT OUR CLIENT LIST<br><br></h1>
+            <p><br>We work with over XXX esteemed clients spread across X different States. These are some of our well known clients<br><br></p>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row flex-box flex-wrap-wrap">
+            <div class="col-sm-4 flex-box flex-justify-center flex-align-center"><a href="assets/img/1.png" class="fancybox" rel="gallery1" title="Hero Image Nature"><img class="img-fluid" src="assets/img/1.png"></a></div>
+            <div class="col-sm-4 flex-box flex-justify-center flex-align-center"><a href="assets/img/2.jpg" class="fancybox" rel="gallery1" title="Hero Image Technology"><img class="img-fluid" src="assets/img/2.jpg"></a></div>
+            <div class="col-sm-4 flex-box flex-justify-center flex-align-center"><a href="assets/img/3.png" class="fancybox" rel="gallery1" title="Hero Image Travel"><img class="img-fluid" src="assets/img/3.png"></a></div>
+            <div class="col-sm-4 flex-box flex-justify-center flex-align-center"><a href="assets/img/4.png" class="fancybox" rel="gallery1" title="Hero Image Food"><img class="img-fluid" src="assets/img/4.png"></a></div>
+            <div class="col-sm-4 flex-box flex-justify-center flex-align-center"><a href="assets/img/5.png" class="fancybox" rel="gallery1" title="Hero Image Music"><img class="img-fluid" src="assets/img/5.png"></a></div>
+            <div class="col-sm-4 flex-box flex-justify-center flex-align-center"><a href="assets/img/6.png" class="fancybox" rel="gallery1" title="Hero Image Photography"><img class="img-fluid" src="assets/img/6.png"></a></div>
+        </div>
+    </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/Basic-fancyBox-Gallery2.js"></script>
