--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light navbar-expand-lg fixed-top navigation-clean" style="background-color:#f4f4f4;">
-        <div class="container"><a class="navbar-brand" href="index.html"><img src="assets/img/sample Logo.jpg" style="width:180px;"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><i class="typcn typcn-th-menu" style="font-size:30px;color:rgb(42,42,42);"></i></button>
+    <nav class="navbar navbar-light navbar-expand-lg navigation-clean" style="background-color:#f4f4f4;">
+        <div class="container"><a class="navbar-brand"><img src="assets/img/sample Logo.jpg" style="width:180px;"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><i class="typcn typcn-th-menu" style="font-size:30px;color:rgb(42,42,42);"></i></button>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
