--- a/index.html
+++ b/index.html
@@ -30,39 +30,8 @@
 </head>
 
 <body>
-    <div></div>
-    <section style="background-image:url(&quot;assets/img/Home.jpg&quot;);height:100vh;">
-        <nav class="navbar navbar-light navbar-expand-lg navigation-clean" style="background-color:rgba(244,244,244,0);">
-            <div class="container"><a class="navbar-brand" href="#"><img src="assets/img/sample Logo.jpg" style="width:180px;"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><i class="typcn typcn-th-menu" style="font-size:30px;color:rgb(42,42,42);"></i></button>
-                <div
-                    class="collapse navbar-collapse" id="navcol-1">
-                    <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#">Home</a></li>
-                        <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">About</a>
-                            <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">Vision &amp; Mission</a><a class="dropdown-item" role="presentation" href="#">Management Team</a><a class="dropdown-item" role="presentation" href="#">Awards &amp; Certifications</a></div>
-                        </li>
-                        <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">Services</a>
-                            <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">Security Services<br></a><a class="dropdown-item" role="presentation" href="#">Investigation Services<br></a></div>
-                        </li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#">Clients</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#">Gallery</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#">Career</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#">Contact</a></li>
-                    </ul>
-            </div>
-            </div>
-        </nav>
-        <div class="jumbotron" style="background-color:rgba(238,238,238,0);">
-            <div class="heading-text">
-                <h1>Your Tagline</h1>
-                <h1>Some Text With Some Info!</h1>
-            </div>
-            <div class="btn-home"><button class="btn btn-primary btn-style" type="button">Clients</button><button class="btn btn-primary btn-style" type="button">Gallery</button><button class="btn btn-primary btn-style" type="button">Contact</button></div>
-            <div class="heading-text p-size link-style"><a href="#" class="link-style">Get The Newslatter&nbsp;<i class="fa fa-angle-double-right"></i></a></div>
-        </div>
-    </section>
-    <nav class="navbar navbar-light navbar-expand-lg fixed-top navigation-clean" style="background-color:#f4f4f4;">
-        <div class="container"><a class="navbar-brand" href="index.html"><img src="assets/img/sample Logo.jpg" style="width:180px;"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><i class="typcn typcn-th-menu" style="font-size:30px;color:rgb(42,42,42);"></i></button>
+    <nav class="navbar navbar-light navbar-expand-lg navigation-clean" style="background-color:#f4f4f4;">
+        <div class="container"><a class="navbar-brand"><img src="assets/img/sample Logo.jpg" style="width:180px;"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><i class="typcn typcn-th-menu" style="font-size:30px;color:rgb(42,42,42);"></i></button>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
@@ -81,6 +50,17 @@
         </div>
         </div>
     </nav>
+    <div></div>
+    <section style="background-image:url(&quot;assets/img/Home.jpg&quot;);height:100vh;">
+        <div class="jumbotron" style="background-color:rgba(238,238,238,0);">
+            <div class="heading-text">
+                <h1>Your Tagline</h1>
+                <h1>Some Text With Some Info!</h1>
+            </div>
+            <div class="btn-home"><button class="btn btn-primary btn-style" type="button">Clients</button><button class="btn btn-primary btn-style" type="button">Gallery</button><button class="btn btn-primary btn-style" type="button">Contact</button></div>
+            <div class="heading-text p-size link-style"><a href="#" class="link-style">Get The Newslatter&nbsp;<i class="fa fa-angle-double-right"></i></a></div>
+        </div>
+    </section>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/Basic-fancyBox-Gallery2.js"></script>
