--- a/services.html
+++ b/services.html
@@ -30,6 +30,26 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-light navbar-expand-lg navigation-clean" style="background-color:#f4f4f4;">
+        <div class="container"><a class="navbar-brand"><img src="assets/img/sample Logo.jpg" style="width:180px;"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><i class="typcn typcn-th-menu" style="font-size:30px;color:rgb(42,42,42);"></i></button>
+            <div
+                class="collapse navbar-collapse" id="navcol-1">
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">About</a>
+                        <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="about.html">Vision &amp; Mission</a><a class="dropdown-item" role="presentation" href="about.html">Management Team</a><a class="dropdown-item" role="presentation" href="about.html">Awards &amp; Certifications</a></div>
+                    </li>
+                    <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">Services</a>
+                        <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="services.html">Security Services<br></a><a class="dropdown-item" role="presentation" href="services.html">Investigation Services<br></a></div>
+                    </li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="Clients.html">Clients</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Career</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
+        </div>
+        </div>
+    </nav>
     <div class="jumbotron hero-technology top-space">
         <h1 class="hero-title">Hero Technology</h1>
         <p class="hero-subtitle">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -76,26 +96,6 @@
             </div>
         </div>
     </div>
-    <nav class="navbar navbar-light navbar-expand-lg fixed-top navigation-clean" style="background-color:#f4f4f4;">
-        <div class="container"><a class="navbar-brand" href="index.html"><img src="assets/img/sample Logo.jpg" style="width:180px;"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><i class="typcn typcn-th-menu" style="font-size:30px;color:rgb(42,42,42);"></i></button>
-            <div
-                class="collapse navbar-collapse" id="navcol-1">
-                <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">About</a>
-                        <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="about.html">Vision &amp; Mission</a><a class="dropdown-item" role="presentation" href="about.html">Management Team</a><a class="dropdown-item" role="presentation" href="about.html">Awards &amp; Certifications</a></div>
-                    </li>
-                    <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">Services</a>
-                        <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="services.html">Security Services<br></a><a class="dropdown-item" role="presentation" href="services.html">Investigation Services<br></a></div>
-                    </li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="Clients.html">Clients</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="gallery.html">Gallery</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Career</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact</a></li>
-                </ul>
-        </div>
-        </div>
-    </nav>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/Basic-fancyBox-Gallery2.js"></script>
