--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
                     </li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="Clients.html">Clients</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="gallery.html">Gallery</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Career</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="career.html">Career</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
         </div>
