--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
                 <h1>Your Tagline</h1>
                 <h1>Some Text With Some Info!</h1>
             </div>
-            <div class="btn-home"><button class="btn btn-primary btn-style" type="button">Clients</button><button class="btn btn-primary btn-style" type="button">Gallery</button><button class="btn btn-primary btn-style" type="button">Contact</button></div>
-            <div class="heading-text p-size link-style"><a href="#" class="link-style">Get The Newslatter&nbsp;<i class="fa fa-angle-double-right"></i></a></div>
+            <div class="btn-home"><a href="career.html"><button class="btn btn-primary btn-style" type="button">Clients</button></a><a href="gallery.html"><button class="btn btn-primary btn-style" type="button">Gallery</button></a><a href="contact.html"><button class="btn btn-primary btn-style" type="button">Contact</button></a></div>
+            <div
+                class="heading-text p-size link-style"><a href="#" class="link-style">Get The Newslatter&nbsp;<i class="fa fa-angle-double-right"></i></a></div>
         </div>
     </section>
     <script src="assets/js/jquery.min.js"></script>
