--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
         </div>
         </div>
     </nav>
-    <div class="jumbotron hero-technology top-space">
+    <div class="jumbotron hero-technology">
         <h1 class="hero-title">About Us</h1>
         <p class="hero-subtitle"><strong>Lorem Ipsum</strong>&nbsp;is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,<br></p>
         <p><a class="btn btn-primary btn-lg hero-button btn-style" role="button" href="#">Learn more</a></p>
