--- a/index.html
+++ b/index.html
@@ -66,7 +66,19 @@
     <div class="container git-hub">
         <p class="text-center"><i class="fa fa-github" style="font-size:80px;"></i></p>
         <p class="text-center" style="font-family:Rubik, sans-serif;">Check out my GitHub Repository</p>
-        <div class="git-btn-div"><a class="btn btn-secondary" role="button" href="https://github.com/KaranKhandekar?tab=repositories" target="_blank">GitHub</a></div>
+        <div class="git-btn-div"><a class="btn btn-dark" role="button" href="https://github.com/KaranKhandekar?tab=repositories" target="_blank">GitHub</a></div>
+    </div>
+    <div class="container-fluid about-me">
+        <div class="row about-me">
+            <div class="col">
+                <h1 class="text-center" data-aos="zoom-in" data-aos-duration="1000" style="font-family:Rubik, sans-serif;">Website For You!<br></h1>
+            </div>
+        </div>
+        <div class="row about-me">
+            <div class="col">
+                <div class="git-btn-div"><a class="btn btn-info" role="button" href="https://github.com/KaranKhandekar?tab=repositories" target="_blank">Aria Web Sample</a></div>
+            </div>
+        </div>
     </div>
     <div class="footer-basic">
         <footer>
@@ -74,12 +86,11 @@
             <ul
                 class="list-inline">
                 <li class="list-inline-item"><a href="#">Home</a></li>
-                <li class="list-inline-item"><a href="#">Services</a></li>
                 <li class="list-inline-item"><a href="#">About</a></li>
-                <li class="list-inline-item"><a href="#">Terms</a></li>
-                <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+                <li class="list-inline-item"><a href="#">Gallery</a></li>
+                <li class="list-inline-item"><a href="#">Contact</a></li>
                 </ul>
-                <p class="copyright">Company Name © 2017</p>
+                <p class="copyright">Karan Khandekar © 2018</p>
         </footer>
     </div>
     <script src="assets/js/jquery.min.js"></script>
