--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="row about-me">
             <div class="col">
-                <div class="git-btn-div"><a class="btn btn-info" role="button" href="website/aria/index.html">Aria Web Sample</a></div>
+                <div class="git-btn-div"><a class="btn btn-info" role="button" href="websites/aria/index.html">Aria Web Sample</a></div>
             </div>
         </div>
     </div>
