--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>KaranKhandekar</title>
+    <title>Karan Khandekar</title>
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Karan Khandekar">
+    <meta property="og:image" content="assets/img/512.jpg">
+    <meta name="description" content="Visual Effects and DI Artist. A multidimensional artist. Work with Hue, Rhythm and Web Designing.">
+    <meta name="twitter:description" content="Visual Effects and DI Artist. A multidimensional artist. Work with Hue, Rhythm and Web Designing.">
+    <meta name="twitter:image" content="assets/img/512.jpg">
+    <meta name="theme-color" content="#e1e1e1">
+    <link rel="icon" type="image/jpeg" sizes="16x16" href="assets/img/16.jpg">
+    <link rel="icon" type="image/jpeg" sizes="32x32" href="assets/img/32.jpg">
+    <link rel="icon" type="image/jpeg" sizes="180x180" href="assets/img/180.jpg">
+    <link rel="icon" type="image/jpeg" sizes="192x192" href="assets/img/192.jpg">
+    <link rel="icon" type="image/jpeg" sizes="512x512" href="assets/img/512.jpg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
     <link rel="stylesheet" href="assets/css/Footer-Basic.css">
@@ -22,7 +35,7 @@
 
 <body style="font-family: 'Josefin Sans', sans-serif;">
     <nav class="navbar navbar-light navbar-expand-md sticky-top bg-white">
-        <div class="container"><a class="navbar-brand" href="#" style="font-family: 'Josefin Sans', sans-serif;filter: blur(0px);">KARAN KHANDEKAR</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand" href="index.html" style="font-family: 'Josefin Sans', sans-serif;filter: blur(0px);">KARAN KHANDEKAR</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
