New version of website

--- a/courses.html
+++ b/courses.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Karan Khandekar</title>
+    <title>Courses | Karan Khandekar</title>
     <meta name="theme-color" content="rgb(77,105,126)">
     <meta name="twitter:description" content="My Personal web profile">
     <meta name="twitter:card" content="summary">
@@ -27,13 +27,13 @@
 </head>
 
 <body style="font-family: Aldrich, sans-serif;">
-    <nav class="navbar navbar-light navbar-expand-md fixed-top bg-white shadow">
+    <nav class="navbar navbar-light navbar-expand-md bg-white shadow">
         <div class="container"><a class="navbar-brand" href="index.html">Karan Khandekar</a><button data-toggle="collapse" class="navbar-toggler border rounded border-dark" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><i class="fa fa-sort-amount-desc" style="color: #000000;"></i></button>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="courses.html" style="filter: blur(1px);">Courses</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html" style="filter: blur(1px);">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="courses.html">Courses</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="achievements.html" style="filter: blur(1px);">Achievements</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="about-me.html" style="filter: blur(1px);">About</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="contact-me.html" style="filter: blur(1px);">Contact</a></li>
@@ -41,10 +41,36 @@
         </div>
         </div>
     </nav>
-    <div class="jumbotron d-flex d-xl-flex justify-content-center align-items-end" style="background-image: url(&quot;assets/img/karanKhandekar_2.jpg&quot;);background-position: center;background-size: cover;background-repeat: no-repeat;height: 100vh;">
-        <div class="d-xl-flex flex-row">
-            <h1 class="text-dark">Karan Khandekar</h1>
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-12 col-lg-4">
+                <div class="card shadow mt-2" data-aos="fade-right" data-aos-duration="2000"><img class="img-fluid card-img-top w-100 d-block" src="assets/img/Course%20image.jpg">
+                    <div class="card-body">
+                        <h6 class="card-title oneLine" data-toggle="tooltip" data-bs-tooltip="" title="Bootstrap Studio | Design website with typing only 10% code."><strong>Bootstrap Studio | Design website with typing only 10% code.</strong></h6>
+                        <hr style="background-color: #585858;">
+                        <h6 class="text-muted card-subtitle mb-2 oneLine" data-toggle="tooltip" data-bs-tooltip="" title="Design fully mobile responsive website with typing only 10% of code in Bootstrap Studio desktop application.">Design fully mobile responsive website with typing only 10% of code in Bootstrap Studio desktop application.<br></h6>
+                        <hr style="background-color: #585858;">
+                        <p>05hr 50min +</p>
+                        <hr style="background-color: #585858;">
+                        <p>54 + Lessions</p>
+                        <div class="row">
+                            <div class="col">
+                                <div class="dropdown" data-toggle="tooltip" data-bs-tooltip="" title="Buy the course from the platfrom you like"><button class="btn btn-outline-info btn-block dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button">Get This Course</button>
+                                    <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="https://keet.in/home/course/bootstrap-studio-design-website-with-typing-only-10-code/3" target="_blank">KEET Learning -&nbsp;<i class="fa fa-rupee"></i>299</a>
+                                        <div
+                                            class="dropdown-divider" role="presentation"></div><a class="dropdown-item" role="presentation" href="https://www.udemy.com/course/draft/2909004/?referralCode=E26659B609774EA22375" target="_blank">Udemy&nbsp;-&nbsp;<i class="fa fa-rupee"></i>299 to &nbsp;<i class="fa fa-rupee"></i>7,128</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+        <div class="col">
+            <div class="card mt-2" data-aos="fade-left" data-aos-duration="2000" style="height: 100%;">
+                <div class="card-body"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube-nocookie.com/embed/rA83kDfvMpE?loop=1&amp;playlist=rA83kDfvMpE&amp;controls=0" width="100%" height="100%"></iframe></div>
+            </div>
+        </div>
+    </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
