--- a/achievements.html
+++ b/achievements.html
@@ -52,8 +52,8 @@
                     <li>India</li>
                     <li>Pakistan</li>
                     <li>United Arab Emirates</li>
-                    <li>Jamica</li>
-                    <li>Unted States</li>
+                    <li>Jamaica<br></li>
+                    <li>United States<br></li>
                     <li>Qatar</li>
                     <li>Philippines</li>
                     <li>Malaysia</li>
@@ -74,8 +74,8 @@
         <div class="media border rounded shadow mb-3 p-2"><img class="img-fluid mr-3" src="https://yt3.ggpht.com/a-/AAuE7mAR5bDVOTKgxukRTIDcKyKIeeZkLZWrdwy2SA=s900-mo-c-c0xffffffff-rj-k-no" width="80">
             <div class="media-body">
                 <h5>KEET Classroom</h5>
-                <p class="text-justify">KEET Classroom is a free learning YouTube channel operated by Kkhandekar Electronic Educational Technology Technology Private Limited. KEET Classroom's free videos are watched in more than 10 countries on a daily bases. Apart from this
-                    our videos are embedded in the various website who provide free learning videos. </p>
+                <p class="text-justify">KEET Classroom is a free learning YouTube channel operated by Khandekar Electronic Educational Technology Private Limited. KEET Classroom's free videos are watched in more than 10 countries daily. Apart from this our videos are embedded
+                    in the various website who provide free learning videos.<br><br></p>
             </div>
         </div>
     </div>
