--- a/contact-me.html
+++ b/contact-me.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aldrich">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/custNav.css">
+    <link rel="stylesheet" href="assets/css/Drag-And-Drop-Image.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="assets/css/Number-Input-Without-Arrow.css">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -89,7 +90,12 @@
                         </div>
                         <div class="col-12">
                             <div class="form-group"><label for="Phone Number">Attach file <em>It will be good if you attach ZIP if you have multipal file to send.</em> (Optional)</label>
-                                <div><input class="border rounded shadow-sm" type="file" data-toggle="tooltip" data-bs-tooltip="" name="Attachment" multiple="" title="Attach multiple or single file."></div>
+                                <div></div>
+                                <form>
+                                    <div class="form-group">
+                                        <div class="file-drop-area"><span class="fake-btn">Choose files</span><span class="file-msg">or drag and drop files here</span><input type="file" class="file-input"></div>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                         <div class="col">
@@ -107,6 +113,7 @@
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
     <script src="assets/js/custNav.js"></script>
+    <script src="assets/js/Drag-And-Drop-Image.js"></script>
     <script src="assets/js/dropdown-animation.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.js"></script>
