--- a/contact-me.html
+++ b/contact-me.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/jpeg" sizes="512x512" href="assets/img/512.jpg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aldrich">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/custNav.css">
@@ -99,7 +99,7 @@
                             </div>
                         </div>
                         <div class="col">
-                            <div class="form-group text-center"><button class="btn btn-info" data-toggle="tooltip" data-bs-tooltip="" type="button" title="Click to send your message or question"><i class="fa fa-send-o"></i>&nbsp;Send Message</button></div>
+                            <div class="form-group text-center"><button class="btn btn-info" data-toggle="tooltip" data-bs-tooltip="" type="submit" title="Click to send your message or question"><i class="fa fa-send-o"></i>&nbsp;Send Message</button></div>
                         </div>
                     </div>
                     <p class="text-center">You will get your reply within 48 hours.</p>
