--- a/courses.html
+++ b/courses.html
@@ -83,7 +83,7 @@
                         <div class="row">
                             <div class="col">
                                 <div class="dropdown" data-toggle="tooltip" data-bs-tooltip="" title="Buy the course from the platfrom you like"><button class="btn btn-outline-info btn-block dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button">Get This Course</button>
-                                    <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="https://keet.in/home/course/bootstrap-studio-design-website-with-typing-only-10-code/3" target="_blank">KEET Learning -&nbsp;<i class="fa fa-rupee"></i>299</a>
+                                    <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="https://keet.in/course/14" target="_blank">KEET Learning -&nbsp;<i class="fa fa-rupee"></i>299</a>
                                         <div
                                             class="dropdown-divider" role="presentation"></div><a class="dropdown-item" role="presentation" href="https://www.udemy.com/course/draft/2909004/?referralCode=E26659B609774EA22375" target="_blank">Udemy&nbsp;-&nbsp;<i class="fa fa-rupee"></i>299 to &nbsp;<i class="fa fa-rupee"></i>7,128</a></div>
                             </div>
