--- a/achievements.html
+++ b/achievements.html
@@ -10,6 +10,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Karan Khandekar">
     <meta name="description" content="My Personal web profile">
+    <link rel="apple-touch-icon" type="image/jpeg" sizes="180x180" href="assets/img/180.jpg">
     <link rel="icon" type="image/jpeg" sizes="16x16" href="assets/img/16.jpg">
     <link rel="icon" type="image/jpeg" sizes="32x32" href="assets/img/32.jpg">
     <link rel="icon" type="image/jpeg" sizes="180x180" href="assets/img/180.jpg">
@@ -17,12 +18,14 @@
     <link rel="icon" type="image/jpeg" sizes="512x512" href="assets/img/512.jpg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aldrich">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/custNav.css">
     <link rel="stylesheet" href="assets/css/Drag-And-Drop-Image.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
+    <link rel="stylesheet" href="assets/css/Hero-Carousel.css">
+    <link rel="stylesheet" href="assets/css/Hero-Features.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="assets/css/Number-Input-Without-Arrow.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 <!-- Load Facebook SDK for JavaScript -->
@@ -56,25 +59,22 @@
 <body style="font-family: Aldrich, sans-serif;">
     <nav class="navbar navbar-light navbar-expand-md bg-white shadow">
         <div class="container"><a class="navbar-brand" href="index.html">Karan Khandekar</a><button data-toggle="collapse" class="navbar-toggler border rounded border-dark" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><i class="fa fa-sort-amount-desc" style="color: #000000;"></i></button>
-            <div
-                class="collapse navbar-collapse" id="navcol-1">
-                <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html" style="filter: blur(1px);">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="courses.html" style="filter: blur(1px);">Courses</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="achievements.html" style="filter: blur(0px);">Achievements</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="about-me.html" style="filter: blur(1px);">About</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact-me.html" style="filter: blur(1px);">Contact</a></li>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html" style="filter: blur(1px);">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="courses.html" style="filter: blur(1px);">Courses</a></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"><a class="nav-link" href="contact-me.html" style="filter: blur(1px);">Contact</a></li>
                 </ul>
-        </div>
+            </div>
         </div>
     </nav>
     <div class="container mt-3">
         <div class="media border rounded shadow mb-3 p-2"><img class="mr-3" src="assets/img/keet/180.jpg" style="width: 80px;">
             <div class="media-body">
                 <h5>Khandekar Electronic Educational Technology Private Limited</h5>
-                <p class="text-justify">Khandekar Electronic Educational Technology Private Limited brand name is KEET, as KEET is my primary business we invested so much of time in KEET. As a learning service provider, we have tried to reach out to students from various sources,
-                    from that YouTube is one source. In YouTube, we run our channel by the name of&nbsp;<a href="https://www.youtube.com/c/keetclassroom"><strong>KEET Classroom</strong></a>&nbsp;where we upload&nbsp;<strong>FREE</strong>&nbsp;learning
-                    videos.&nbsp;<br><br>Now our YouTube channel is watched in different countries. The most-watched countries are,<br></p>
+                <p class="text-justify">Khandekar Electronic Educational Technology Private Limited brand name is KEET, as KEET is my primary business we invested so much of time in KEET. As a learning service provider, we have tried to reach out to students from various sources, from that YouTube is one source. In YouTube, we run our channel by the name of&nbsp;<a href="https://www.youtube.com/c/keetclassroom"><strong>KEET Classroom</strong></a>&nbsp;where we upload&nbsp;<strong>FREE</strong>&nbsp;learning videos.&nbsp;<br><br>Now our YouTube channel is watched in different countries. The most-watched countries are,<br></p>
                 <ol>
                     <li>India</li>
                     <li>Pakistan</li>
@@ -101,16 +101,14 @@
         <div class="media border rounded shadow mb-3 p-2"><img class="img-fluid mr-3" src="https://yt3.ggpht.com/a-/AAuE7mAR5bDVOTKgxukRTIDcKyKIeeZkLZWrdwy2SA=s900-mo-c-c0xffffffff-rj-k-no" width="80">
             <div class="media-body">
                 <h5>KEET Classroom</h5>
-                <p class="text-justify">KEET Classroom is a free learning YouTube channel operated by Khandekar Electronic Educational Technology Private Limited. KEET Classroom's free videos are watched in more than 10 countries daily. Apart from this our videos are embedded
-                    in the various website who provide free learning videos.<br><br></p>
+                <p class="text-justify">KEET Classroom is a free learning YouTube channel operated by Khandekar Electronic Educational Technology Private Limited. KEET Classroom's free videos are watched in more than 10 countries daily. Apart from this our videos are embedded in the various website who provide free learning videos.<br><br></p>
             </div>
         </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/smart-forms.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="assets/js/custNav.js"></script>
     <script src="assets/js/Drag-And-Drop-Image.js"></script>
     <script src="assets/js/dropdown-animation.js"></script>
