--- a/contact-me.html
+++ b/contact-me.html
@@ -10,6 +10,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Karan Khandekar">
     <meta name="description" content="My Personal web profile">
+    <link rel="apple-touch-icon" type="image/jpeg" sizes="180x180" href="assets/img/180.jpg">
     <link rel="icon" type="image/jpeg" sizes="16x16" href="assets/img/16.jpg">
     <link rel="icon" type="image/jpeg" sizes="32x32" href="assets/img/32.jpg">
     <link rel="icon" type="image/jpeg" sizes="180x180" href="assets/img/180.jpg">
@@ -17,12 +18,14 @@
     <link rel="icon" type="image/jpeg" sizes="512x512" href="assets/img/512.jpg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aldrich">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/custNav.css">
     <link rel="stylesheet" href="assets/css/Drag-And-Drop-Image.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
+    <link rel="stylesheet" href="assets/css/Hero-Carousel.css">
+    <link rel="stylesheet" href="assets/css/Hero-Features.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="assets/css/Number-Input-Without-Arrow.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 <!-- Load Facebook SDK for JavaScript -->
@@ -56,16 +59,15 @@
 <body style="font-family: Aldrich, sans-serif;">
     <nav class="navbar navbar-light navbar-expand-md bg-white shadow">
         <div class="container"><a class="navbar-brand" href="index.html">Karan Khandekar</a><button data-toggle="collapse" class="navbar-toggler border rounded border-dark" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><i class="fa fa-sort-amount-desc" style="color: #000000;"></i></button>
-            <div
-                class="collapse navbar-collapse" id="navcol-1">
-                <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html" style="filter: blur(1px);">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="courses.html" style="filter: blur(1px);">Courses</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="achievements.html" style="filter: blur(1px);">Achievements<br></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="about-me.html" style="filter: blur(1px);">About</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="contact-me.html">Contact</a></li>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html" style="filter: blur(1px);">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="courses.html" style="filter: blur(1px);">Courses</a></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"><a class="nav-link active" href="contact-me.html">Contact</a></li>
                 </ul>
-        </div>
+            </div>
         </div>
     </nav>
     <div class="container mt-3">
@@ -93,13 +95,13 @@
                                 <div></div>
                                 <form>
                                     <div class="form-group">
-                                        <div class="file-drop-area"><span class="fake-btn">Choose files</span><span class="file-msg">or drag and drop files here</span><input type="file" class="file-input"></div>
+                                        <div class="file-drop-area"><span class="fake-btn">Choose files</span><span class="file-msg">or drag and drop files here</span><input class="form-control-file file-input" type="file"></div>
                                     </div>
                                 </form>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="form-group text-center"><button class="btn btn-info" data-toggle="tooltip" data-bs-tooltip="" type="submit" title="Click to send your message or question"><i class="fa fa-send-o"></i>&nbsp;Send Message</button></div>
+                            <div class="form-group text-center"><button class="btn btn-info" data-toggle="tooltip" data-bss-tooltip="" type="submit" title="Click to send your message or question"><i class="fa fa-send-o"></i>&nbsp;Send Message</button></div>
                         </div>
                     </div>
                     <p class="text-center">You will get your reply within 48 hours.</p>
@@ -111,7 +113,7 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/smart-forms.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="assets/js/custNav.js"></script>
     <script src="assets/js/Drag-And-Drop-Image.js"></script>
     <script src="assets/js/dropdown-animation.js"></script>
