--- a/courses.html
+++ b/courses.html
@@ -10,6 +10,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Karan Khandekar">
     <meta name="description" content="My Personal web profile">
+    <link rel="apple-touch-icon" type="image/jpeg" sizes="180x180" href="assets/img/180.jpg">
     <link rel="icon" type="image/jpeg" sizes="16x16" href="assets/img/16.jpg">
     <link rel="icon" type="image/jpeg" sizes="32x32" href="assets/img/32.jpg">
     <link rel="icon" type="image/jpeg" sizes="180x180" href="assets/img/180.jpg">
@@ -17,12 +18,14 @@
     <link rel="icon" type="image/jpeg" sizes="512x512" href="assets/img/512.jpg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aldrich">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/custNav.css">
     <link rel="stylesheet" href="assets/css/Drag-And-Drop-Image.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
+    <link rel="stylesheet" href="assets/css/Hero-Carousel.css">
+    <link rel="stylesheet" href="assets/css/Hero-Features.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="assets/css/Number-Input-Without-Arrow.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 <!-- Load Facebook SDK for JavaScript -->
@@ -56,16 +59,15 @@
 <body style="font-family: Aldrich, sans-serif;">
     <nav class="navbar navbar-light navbar-expand-md bg-white shadow">
         <div class="container"><a class="navbar-brand" href="index.html">Karan Khandekar</a><button data-toggle="collapse" class="navbar-toggler border rounded border-dark" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><i class="fa fa-sort-amount-desc" style="color: #000000;"></i></button>
-            <div
-                class="collapse navbar-collapse" id="navcol-1">
-                <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html" style="filter: blur(1px);">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="courses.html">Courses</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="achievements.html" style="filter: blur(1px);">Achievements</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="about-me.html" style="filter: blur(1px);">About</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact-me.html" style="filter: blur(1px);">Contact</a></li>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html" style="filter: blur(1px);">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="courses.html">Courses</a></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"><a class="nav-link" href="contact-me.html" style="filter: blur(1px);">Contact</a></li>
                 </ul>
-        </div>
+            </div>
         </div>
     </nav>
     <div class="container mt-4">
@@ -73,37 +75,44 @@
             <div class="col-12 col-lg-4">
                 <div class="card shadow mt-2" data-aos="fade-right" data-aos-duration="2000"><img class="img-fluid card-img-top w-100 d-block" src="assets/img/Course%20image.jpg">
                     <div class="card-body">
-                        <h6 class="card-title oneLine" data-toggle="tooltip" data-bs-tooltip="" title="Bootstrap Studio | Design website with typing only 10% code."><strong>Bootstrap Studio | Design website with typing only 10% code.</strong></h6>
+                        <h6 class="card-title oneLine" data-toggle="tooltip" data-bss-tooltip="" title="Bootstrap Studio | Design website with typing only 10% code."><strong>Bootstrap Studio | Design website with typing only 10% code.</strong></h6>
                         <hr style="background-color: #585858;">
-                        <h6 class="text-muted card-subtitle mb-2 oneLine" data-toggle="tooltip" data-bs-tooltip="" title="Design fully mobile responsive website with typing only 10% of code in Bootstrap Studio desktop application.">Design fully mobile responsive website with typing only 10% of code in Bootstrap Studio desktop application.<br></h6>
+                        <h6 class="text-muted card-subtitle mb-2 oneLine" data-toggle="tooltip" data-bss-tooltip="" title="Design fully mobile responsive website with typing only 10% of code in Bootstrap Studio desktop application.">Design fully mobile responsive website with typing only 10% of code in Bootstrap Studio desktop application.<br></h6>
                         <hr style="background-color: #585858;">
-                        <p>05hr 50min +</p>
+                        <p>11hr 10min +</p>
                         <hr style="background-color: #585858;">
-                        <p>54 + Lessions</p>
                         <div class="row">
-                            <div class="col">
-                                <div class="dropdown" data-toggle="tooltip" data-bs-tooltip="" title="Buy the course from the platfrom you like"><button class="btn btn-outline-info btn-block dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button">Get This Course</button>
-                                    <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="https://keet.in/course/14" target="_blank">KEET Learning -&nbsp;<i class="fa fa-rupee"></i>299</a>
-                                        <div
-                                            class="dropdown-divider" role="presentation"></div><a class="dropdown-item" role="presentation" href="https://www.udemy.com/course/draft/2909004/?referralCode=E26659B609774EA22375" target="_blank">Udemy&nbsp;-&nbsp;<i class="fa fa-rupee"></i>299 to &nbsp;<i class="fa fa-rupee"></i>7,128</a></div>
-                            </div>
+                            <div class="col-12"><button class="btn btn-info" type="button" style="width: 100%;">Keet Classroom</button></div>
+                            <div class="col-12 mt-3"><button class="btn btn-info" type="button" style="width: 100%;">Udemy</button></div>
+                            <div class="col-12 mt-3"><button class="btn btn-info" type="button" style="width: 100%;" data-target="#modal-1" data-toggle="modal">Unlock discount</button></div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col">
-            <div class="card mt-2" data-aos="fade-left" data-aos-duration="2000" style="height: 100%;">
-                <div class="card-body"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube-nocookie.com/embed/rA83kDfvMpE?loop=1&amp;playlist=rA83kDfvMpE&amp;controls=0" width="100%" height="100%"></iframe></div>
+            <div class="col">
+                <div class="card mt-2" data-aos="fade-left" data-aos-duration="2000" style="height: 100%;">
+                    <div class="card-body"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube-nocookie.com/embed/4HVv7rZuuO8?loop=1&amp;playlist=4HVv7rZuuO8&amp;controls=0" width="100%" height="100%"></iframe></div>
+                </div>
             </div>
         </div>
     </div>
+    <div class="modal fade" role="dialog" tabindex="-1" id="modal-1">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Unlock Discount</h4><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+                </div>
+                <div class="modal-body">
+                    <p>20% off on Keet Classroom - Use the below coupon</p>
+                    <p>BSSKENY20</p>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/smart-forms.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="assets/js/custNav.js"></script>
     <script src="assets/js/Drag-And-Drop-Image.js"></script>
     <script src="assets/js/dropdown-animation.js"></script>
