--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Karan Khandekar">
     <meta name="description" content="My Personal web profile">
+    <link rel="apple-touch-icon" type="image/jpeg" sizes="180x180" href="assets/img/180.jpg">
     <link rel="icon" type="image/jpeg" sizes="16x16" href="assets/img/16.jpg">
     <link rel="icon" type="image/jpeg" sizes="32x32" href="assets/img/32.jpg">
     <link rel="icon" type="image/jpeg" sizes="180x180" href="assets/img/180.jpg">
@@ -17,12 +18,14 @@
     <link rel="icon" type="image/jpeg" sizes="512x512" href="assets/img/512.jpg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aldrich">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/custNav.css">
     <link rel="stylesheet" href="assets/css/Drag-And-Drop-Image.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
+    <link rel="stylesheet" href="assets/css/Hero-Carousel.css">
+    <link rel="stylesheet" href="assets/css/Hero-Features.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="assets/css/Number-Input-Without-Arrow.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 <!-- Load Facebook SDK for JavaScript -->
@@ -54,30 +57,58 @@
 </head>
 
 <body style="font-family: Aldrich, sans-serif;">
-    <nav class="navbar navbar-light navbar-expand-md fixed-top bg-white shadow">
+    <nav class="navbar navbar-light navbar-expand-md sticky-top bg-white shadow">
         <div class="container"><a class="navbar-brand" href="index.html">Karan Khandekar</a><button data-toggle="collapse" class="navbar-toggler border rounded border-dark" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><i class="fa fa-sort-amount-desc" style="color: #000000;"></i></button>
-            <div
-                class="collapse navbar-collapse" id="navcol-1">
-                <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="courses.html" style="filter: blur(1px);">Courses</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="achievements.html" style="filter: blur(1px);">Achievements</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="about-me.html" style="filter: blur(1px);">About</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact-me.html" style="filter: blur(1px);">Contact</a></li>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="courses.html" style="filter: blur(1px);">Courses</a></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"><a class="nav-link" href="contact-me.html" style="filter: blur(1px);">Contact</a></li>
                 </ul>
-        </div>
+            </div>
         </div>
     </nav>
-    <div class="jumbotron d-flex d-xl-flex justify-content-center align-items-end" style="background-image: url(&quot;assets/img/karanKhandekar_2.jpg&quot;);background-position: center;background-size: cover;background-repeat: no-repeat;height: 100vh;">
-        <div class="d-xl-flex flex-row">
-            <h1 class="text-dark">Karan Khandekar</h1>
+    <section>
+        <div style="height: 600px;background: url(&quot;assets/img/karanKhandekar_2.jpg&quot;) center / cover;"></div>
+        <div class="container h-100 position-relative" style="top: -50px;">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 d-flex justify-content-center">
+                <div class="col mb-5">
+                    <div class="card">
+                        <div class="card-body pt-5">
+                            <div class="bs-icon-lg bs-icon-rounded bs-icon-primary d-flex flex-shrink-0 justify-content-center align-items-center position-absolute mb-3 bs-icon bs-icon-lg" style="top: -30px;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-discord">
+                                    <path d="M13.545 2.907a13.227 13.227 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.19 12.19 0 0 0-3.658 0 8.258 8.258 0 0 0-.412-.833.051.051 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.041.041 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032c.001.014.01.028.021.037a13.276 13.276 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019c.308-.42.582-.863.818-1.329a.05.05 0 0 0-.01-.059.051.051 0 0 0-.018-.011 8.875 8.875 0 0 1-1.248-.595.05.05 0 0 1-.02-.066.051.051 0 0 1 .015-.019c.084-.063.168-.129.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.052.052 0 0 1 .053.007c.08.066.164.132.248.195a.051.051 0 0 1-.004.085 8.254 8.254 0 0 1-1.249.594.05.05 0 0 0-.03.03.052.052 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.235 13.235 0 0 0 4.001-2.02.049.049 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.034.034 0 0 0-.02-.019Zm-8.198 7.307c-.789 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612Zm5.316 0c-.788 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612Z"></path>
+                                </svg></div>
+                            <h4 class="font-weight-bold card-title">Discord</h4>
+                            <h6 class="text-muted card-subtitle mb-2">Connect to my server</h6>
+                        </div>
+                        <div class="card-footer"><a href="https://discord.gg/d4kFGjgKCH">Enter Server&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
+                                    <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
+                                </svg></a></div>
+                    </div>
+                </div>
+                <div class="col mb-5">
+                    <div class="card">
+                        <div class="card-body pt-5">
+                            <div class="bs-icon-lg bs-icon-rounded bs-icon-primary d-flex flex-shrink-0 justify-content-center align-items-center position-absolute mb-3 bs-icon bs-icon-lg" style="top: -30px;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-telegram">
+                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.287 5.906c-.778.324-2.334.994-4.666 2.01-.378.15-.577.298-.595.442-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294.26.006.549-.1.868-.32 2.179-1.471 3.304-2.214 3.374-2.23.05-.012.12-.026.166.016.047.041.042.12.037.141-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8.154 8.154 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629.093.06.183.125.27.187.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.426 1.426 0 0 0-.013-.315.337.337 0 0 0-.114-.217.526.526 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09z"></path>
+                                </svg></div>
+                            <h4 class="font-weight-bold card-title">Telegram</h4>
+                            <h6 class="text-muted card-subtitle mb-2">Join us on the Telegram Group</h6>
+                        </div>
+                        <div class="card-footer"><a href="https://t.me/+k3qibfJCRz0zYWI1">Join Group&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
+                                    <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
+                                </svg></a></div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
+    </section>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/smart-forms.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="assets/js/custNav.js"></script>
     <script src="assets/js/Drag-And-Drop-Image.js"></script>
     <script src="assets/js/dropdown-animation.js"></script>
